@@ -598,3 +598,4 @@ check unclosed --pages 1
 QPDF_pages findPage not found 0
 qpdf overlay page with no resources 0
 QPDFObjectHandle check ownership 0
+qpdf weak crypto warning 0
